--- a/style.css
+++ b/style.css
@@ -1,376 +1,371 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html,body {
-    font-family: 'Poppins', sans-serif;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
+html,
+body {
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
-
 
 /* nav */
 
-.nav{
+.nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 70px;
+  align-items: center;
+  padding: 20px 20px;
+  position: relative;
+  z-index: 4;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 15%;
+  color: white;
+}
+.logo img:hover {
+  cursor: pointer;
+}
+.logo h1:hover {
+  cursor: pointer;
+}
+.logo img {
+  color: white;
+  background: white;
+  filter: invert(1);
+}
+.navlist {
+  width: 50%;
+}
+.navlist ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.navlist ul li {
+  cursor: pointer;
+}
+.icons {
+  width: 10%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.icons i {
+  cursor: pointer;
+}
+
+/* body */
+#main {
+  height: 90vh;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+.black {
+  width: 30%;
+  height: 100vh;
+  background-color: black;
+  z-index: -1;
+  position: absolute;
+}
+
+.shoe {
+  width: 60%;
+  height: 70%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.round_bg {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background-color: rgb(209, 166, 58);
+  box-shadow: 3px 0px 50px 1px black, inset 20px 0px 25px 0px black;
+}
+.shoe img {
+  position: relative;
+  top: -180px;
+  left: -50px;
+  width: 600px;
+  height: 650px;
+  transform: rotate(30deg);
+  z-index: 3;
+}
+.shadow {
+  position: relative;
+  top: 240px;
+  left: -50px;
+  width: 480px;
+  height: 10px;
+  box-shadow: -5px 35px 10px 10px black;
+  border-radius: 30%;
+  z-index: 2;
+  transform: rotate(30deg);
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80%;
+  width: 50%;
+  position: absolute;
+  right: 0;
+  padding: 0 60px;
+}
+.description h2 {
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  font-size: 0.7rem;
+}
+.description h1 {
+  font-weight: bolder;
+  font-size: 6rem;
+}
+.description p {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.description button {
+  margin: 30px 0;
+  width: 200px;
+  line-height: 2.5rem;
+  text-transform: uppercase;
+  font-weight: bolder;
+  letter-spacing: 3px;
+  border: none;
+  background-color: black;
+  color: white;
+  border-radius: 100px;
+}
+.description button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+.images {
+  align-items: center;
+  display: flex;
+  width: 350px;
+  justify-content: space-between;
+  z-index: 2;
+}
+.images img {
+  width: 50px;
+  height: 50px;
+}
+.images img:hover {
+  cursor: pointer;
+  transform: scale(1.4);
+}
+
+.images i:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.faded {
+  position: absolute;
+  padding: 0 40px;
+  height: 200px;
+  left: 0;
+  bottom: 0;
+  color: grey;
+  opacity: 0.1;
+}
+
+.faded h1 {
+  font-size: 15rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .logo {
+    width: 25%;
+  }
+  .shoe img {
+    top: -140px;
+    width: 450px;
+    height: 500px;
+  }
+  .round_bg {
+    width: 300px;
+    height: 300px;
+  }
+  .shadow {
+    top: 180px;
+    left: -50px;
+    width: 380px;
+    height: 10px;
+  }
+  .description h1 {
+    font-size: 3rem;
+  }
+  .description p {
+    font-size: 0.8rem;
+  }
+  .images {
+    width: 280px;
+  }
+  .faded {
+    bottom: -80px;
+  }
+  .faded h1 {
+    font-size: 9rem;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  #main {
+    flex-direction: column;
+  }
+  .main {
+    flex-direction: column;
+  }
+  .description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 50%;
+    width: 70%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 40px 40px 0 40px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  html,
+  body {
+    font-family: "Poppins", sans-serif;
+    width: 100%;
+    height: 130vh;
+    overflow: visible;
+  }
+  #main {
+    height: 120vh;
+    position: relative;
+  }
+  .black {
+    height: 140vh;
+  }
+
+  .nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 70px;
+    height: 100px;
     align-items: center;
-padding: 20px 20px;
-position: relative;
-z-index: 4;
-}
-.logo{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 15%;
-    color: white;
-}
-.logo img:hover{
-    cursor: pointer;
-}
-.logo h1:hover{
-    cursor: pointer;
-}
-.logo img{
-    color: white;
-    background: white;
-    filter: invert(1);
-}
-.navlist{
+    padding: 20px 20px;
+    position: relative;
+    z-index: 4;
+  }
+  .logo {
+    width: 25%;
+    display: block;
+  }
+  .img {
+    overflow: hidden;
+    position: relative;
+    margin-left: -20px;
+    width: 310px;
+    padding-left: 25px;
+    padding-top: 25px;
+    margin-top: -25px;
+  }
+  .navlist {
     width: 50%;
-}
-.navlist ul{
-    display: flex;
+    display: block;
+    padding-top: 20px;
+  }
+  .navlist ul {
+    display: block;
     justify-content: space-evenly;
     list-style: none;
     text-decoration: none;
     text-transform: uppercase;
-}
-.navlist ul li{
-cursor: pointer;
-}
-.icons{
+  }
+  .icons {
     width: 10%;
-    display: flex;
-    justify-content: space-evenly;
-}
-.icons i{
-    cursor: pointer;
-}
-
-
-/* body */
-#main{
-    height: 90vh;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-.black{
-    width: 30%;
-    height: 100vh;
-    background-color: black;
-    z-index: -1;
-    position: absolute;
-}
-
-.shoe{
-    width: 60%;
-    height: 70%;
-    position: absolute;
-    display: flex;
+    height: 100%;
+    display: inline-block;
     align-items: center;
-    justify-content: center;
-}
-.round_bg{
-    position: relative;
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-color: rgb(209, 166, 58);
-    box-shadow: 3px 0px 50px 1px black, 
-    inset 20px 0px 25px 0px black;
-}
-.shoe img{
-    position: relative;
-    top: -180px;
-    left: -50px;
-    width: 600px;
-    height: 650px;
-    transform: rotate(30deg);
-    z-index: 3;
-}
-.shadow{
-    position: relative;
-    top: 240px;
-    left: -50px;
-    width: 480px;
-    height: 10px;
-    box-shadow: -5px 35px 10px 10px black;
-    border-radius: 30%;
-    z-index: 2;
-    transform: rotate(30deg);
-}
-
-
-
-.description{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 80%;
-    width: 50%;
-    position: absolute;
-    right: 0;
-    padding: 0 60px;
-}
-.description h2{
-    text-transform: uppercase;
-    letter-spacing:8px;
-    font-size: 0.7rem;
-}
-.description h1{
-    font-weight: bolder;
-    font-size: 6rem;
-}
-.description p{
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-.description button{
-    margin: 30px 0;
-    width: 200px;
-    line-height: 2.5rem;
-    text-transform: uppercase;
-    font-weight: bolder;
-    letter-spacing: 3px;
-    border: none;
-    background-color: black;
-    color: white;
-    border-radius: 100px;
-}
-.description button:hover{
-    cursor: pointer;
-    opacity: 0.8;
-}
-.images{
-    align-items: center;
-    display: flex;
-    width: 350px;
-    justify-content: space-between;
-    z-index: 2;
-}
-.images img{
-    width: 50px;
-    height: 50px;
-}
-.images img:hover{
-    cursor: pointer;
-    transform:scale(1.4);
-}
-
-.images i:hover{
-    cursor: pointer;
-    transform:scale(1.2);
-}
-
-.faded{
-    position: absolute;
-    padding: 0 40px;
-    height: 200px;
-    left: 0;
-    bottom: 0;
-    color: grey;
-    opacity: 0.1;
-}
-
-.faded h1{
-    font-size: 15rem;
-}
-
-@media only screen and (max-width: 768px) {
-    .logo {
-        width: 25%;
-    }
-    .shoe img {
-        top: -140px;
-        width: 450px;
-        height: 500px;
-    }
-    .round_bg {
-        width: 300px;
-        height: 300px;
-    }
-    .shadow {
-        top: 180px;
-        left: -50px;
-        width: 380px;
-        height: 10px;
-    }
-    .description h1 {
-        font-size: 3rem;
-    }
-    .description p {
-        font-size: 0.8rem;
-    }
-    .images {
-        width: 300px;
-    }
-    .faded {
-        bottom: -80px;
-    }
-    .faded h1 {
-        font-size: 9rem;
-    }
-}
-
-@media only screen and (max-width: 700px){
-    #main {
-        flex-direction: column;
-    }
-    .main {
-        flex-direction: column;
-    }
-    .description {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 50%;
-        width: 70%;
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        padding: 40px 40px 0 40px;
-    }
-}
-
-@media only screen and (max-width: 480px){
-    html, body {
-        font-family: 'Poppins', sans-serif;
-        width: 100%;
-        height: 130vh;
-        overflow: visible;
-    }
-    #main {
-        height: 120vh;
-        position: relative;
-    }
-    .black {
-        height: 140vh;
-    }
-
-    .nav {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        height: 100px;
-        align-items: center;
-        padding: 20px 20px;
-        position: relative;
-        z-index: 4;
-    }
-    .logo {
-        width: 25%;
-        display: block;
-    }
-    .img {
-        overflow: hidden;
-        position: relative;
-        margin-left: -20px;
-        width: 310px;
-        padding-left: 25px;
-        padding-top: 25px;
-        margin-top: -25px;
-    }
-    .navlist {
-        width: 50%;
-        display: block;
-        padding-top: 20px;
-    }
-    .navlist ul {
-        display: block;
-        justify-content: space-evenly;
-        list-style: none;
-        text-decoration: none;
-        text-transform: uppercase;
-    }
-    .icons {
-        width: 10%;
-        height: 100%;
-        display: inline-block;
-        align-items: center;
-    }
-    .icons i{
-        margin-top: 20px;
-    }
-.shoe {
+  }
+  .icons i {
+    margin-top: 20px;
+  }
+  .shoe {
     width: 100%;
     height: 50%;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.shoe img {
+  }
+  .shoe img {
     top: -140px;
     left: -40px;
     width: 400px;
     height: 450px;
     transform: rotate(30deg);
-}
-.round_bg {
+  }
+  .round_bg {
     width: 250px;
     height: 250px;
-}
-.shadow {
+  }
+  .shadow {
     top: 150px;
     left: -30px;
     width: 320px;
     height: 20px;
-}
-.description {
+  }
+  .description {
     padding: 0 10px;
-}
-.description h1 {
+  }
+  .description h1 {
     font-size: 2rem;
-}
+  }
 
-.description h2 {
+  .description h2 {
     text-transform: uppercase;
     letter-spacing: 4px;
     font-size: 0.6rem;
-}
-.description p{
+  }
+  .description p {
     line-height: 1rem;
-}
-.description button {
+  }
+  .description button {
     margin: 10px 0;
     width: 150px;
     line-height: 2rem;
-}
-.images {
+  }
+  .images {
     display: grid;
     width: 200px;
     height: 150px;
-    grid-template-columns: repeat(2,1fr);
-}
-.faded {
-    height: 50px;
-    bottom: -15px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .faded {
+    height: 80px;
+    bottom: -45px;
     width: 100%;
-    left: 0;
-    position: absolute;
+    left: 10px;
     overflow: hidden;
     padding: 0;
-}
-.faded h1 {
+  }
+  .faded h1 {
     font-size: 4.2rem;
-    height: 50px;
-}
+  }
 }
